internal/suites/example/kube/authelia/authelia.yml
---
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'authelia'
  namespace: 'authelia'
  labels:
    app: 'authelia'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'authelia'
  template:
    metadata:
      labels:
        app: 'authelia'
    spec:
      containers:
        - name: 'authelia'
          image: 'authelia:dist'
          ports:
            - containerPort: 443
          readinessProbe:
            httpGet:
              scheme: 'HTTPS'
              path: '/api/health'
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - name: 'authelia-config'
              mountPath: '/config/configuration.yml'
              readOnly: true
            - name: 'authelia-ssl'
              mountPath: '/pki'
              readOnly: true
            - name: 'secrets'
              mountPath: '/config/secrets'
              readOnly: true
      volumes:
        - name: 'authelia-config'
          hostPath:
            path: '/configmaps/authelia/configuration.yml'
            type: 'File'
        - name: 'authelia-ssl'
          hostPath:
            path: '/configmaps/authelia/ssl'
            type: 'Directory'
        - name: 'secrets'
          secret:
            secretName: 'authelia'
            items:
              - key: 'jwt_secret'
                path: 'jwt_secret'
              - key: 'session'
                path: 'session'
              - key: 'sql_password'
                path: 'sql_password'
              - key: 'ldap_password'
                path: 'ldap_password'
              - key: 'encryption_key'
                path: 'encryption_key'
...
---
apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'authelia-service'
  namespace: 'authelia'
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: 'authelia-skipverify@kubernetescrd'
spec:
  selector:
    app: 'authelia'
  ports:
    - protocol: 'TCP'
      port: 443
      targetPort: 443
...
---
apiVersion: 'networking.k8s.io/v1'
kind: 'Ingress'
metadata:
  name: 'authelia-ingress'
  namespace: 'authelia'
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.ingress.kubernetes.io/router.entrypoints: 'websecure'
spec:
  rules:
    - host: 'login.example.com'
      http:
        paths:
          - path: '/'
            pathType: 'Prefix'
            backend:
              service:
                name: 'authelia-service'
                port:
                  number: 443
...
---
apiVersion: 'traefik.containo.us/v1alpha1'
kind: 'Middleware'
metadata:
  name: 'forwardauth-authelia'
  namespace: 'authelia'
  labels:
    app.kubernetes.io/instance: 'authelia'
    app.kubernetes.io/name: 'authelia'
spec:
  forwardAuth:
    address: 'https://authelia-service.authelia.svc.cluster.local/api/authz/forward-auth'
    trustForwardHeader: true
    authResponseHeaders:
      - 'Authorization'
      - 'Proxy-Authorization'
      - 'Remote-User'
      - 'Remote-Groups'
      - 'Remote-Email'
      - 'Remote-Name'
    tls:
      insecureSkipVerify: true
...
